# Self-healing-code

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg
demo/: SHLLocalizer.py  demo_flet.py  demo_tkinter.py  minimalisticSHL-engine.py
demo/locales/: en.json  fi.json
docs/: index.md  installation.md
docs/api/: ai_translation.md  engine.md  localizer.md  template_localizer.md
docs/concepts/: file_structure.md  localization_engine.md  self_healing.md
docs/examples/: basic_templates.md  basic_ui.md  full_demo.md  roadmap.md  sync.md
docs/guides/: adding_languages.md  syncing_languages.md  templates.md  ui_texts.md
docs/v1/fi/: Matka-SHL:n-taakse.md  readme.md  vocabulary.md
examples/: README.md  basic_templates.py  basic_ui.py  create_new_language.py  full_engine_demo.py  sync_languages.py
shl/: README.md
shl/adapters/: base.py  flet_adapter.py  flet_ui_tree_builder.py  playwright_ui_tree_builder.py  pyqt6_adapter.py  qt_ui_tree_builder.py  tkinter_adapter.py
shl/core/: README.md  form_engine.py  language_manager.py
shl/diff/: README.md  blueprint_diff.py
shl/healer/: healer_engine.py  healer_engine_old.py  healer_log.py  healer_logger.py  healer_memory _old2.py  healer_memory.py  healer_memory_old.py  healer_stats.py
shl/middleman/: base.py  manager.py  user_middleman.py
shl/registry/: blueprint_loader.py  blueprint_to_ucr.py  ucr.json  ucr_loader.py  ucr_schema.json  ucr_to_blueprint.py  ucr_validator.py  ui_blueprint.json
shl/ui_tree/: README.md  ui_node.py  ui_tree_builder.py  ui_tree_printer.py
(+19 files in other folders)
