[metadata]
name = self-healing-localization
version = 0.1.0
author = Tuomas Lähteenmäki
description = A self-healing localization layer for Python applications, automatically creating missing language files and keys.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/lahtis/Self-healing-localization
project_urls =
    Homepage = https://github.com/lahtis/Self-healing-localization
    Repository = https://github.com/lahtis/Self-healing-localization
    Issues = https://github.com/lahtis/Self-healing-localization/issues

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Libraries

keywords =
    localization
    i18n
    internationalization
    translation
    templates
    self-healing
    automation
    python

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =

[options.packages.find]
where = shl

[options.extras_require]
dev =
    pytest
    black
    flake8
    build
    twine

[options.package_data]
* = *.json
